<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackground"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:paddingBottom="8dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context="com.example.android.justjava.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/white"
        android:fontFamily="sans-serif-condensed"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/title"
        android:textAllCaps="true"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="@color/titleColor"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"></View>

    <EditText
        android:id="@+id/your_Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_weight="0.8"
        android:hint="@string/editHint"
        android:inputType="textCapWords"
        android:lines="1"
        android:textColor="@color/titleColor"
        android:textColorHint="@color/editTextHint"
        android:theme="@style/MyStyle"
        android:imeOptions="actionDone"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"></View>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:background="@android:color/white"
        android:gravity="center"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/topping"
        android:textAllCaps="true"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@color/titleColor" />

    <CheckBox
        android:id="@+id/whipped_cream_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.8"
        android:checked="false"
        android:onClick="checkTopping"
        android:paddingLeft="24dp"
        android:paddingStart="24dp"
        android:text="@string/whipped_cream"
        android:textColor="@color/titleColor"
        android:textSize="16sp"
        android:theme="@style/MyStyle" />

    <CheckBox
        android:id="@+id/chocolate_check_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.8"
        android:checked="false"
        android:onClick="checkTopping"
        android:paddingLeft="24dp"
        android:paddingStart="24dp"
        android:text="@string/chocolate"
        android:textColor="@color/titleColor"
        android:textSize="16sp"
        android:theme="@style/MyStyle" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimaryDark"
            android:onClick="decrement"
            android:text="-"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="32sp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.4"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quant"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="1"
                android:textAlignment="center"
                android:textColor="@color/titleColor"
                android:textSize="48sp" />
        </LinearLayout>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimaryDark"
            android:onClick="increment"
            android:text="+"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="32sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"></View>

    <TextView
        android:id="@+id/order_summary_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:background="@android:color/white"
        android:padding="8dp"
        android:text="@string/orderSummary"
        android:textColor="@color/titleColor"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"></View>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:background="@color/colorPrimaryDark"
        android:onClick="submitOrders"
        android:padding="8dp"
        android:text="@string/order"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="32dp"
        android:background="@android:color/white"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/lang"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="@color/titleColor" />

</LinearLayout>